# qt-heif-image-plugin

./: README.md
src/: CMakeLists.txt
